Updated userguide about dropbox settings for ZotFile

--- a/Docs/UserManual.tex
+++ b/Docs/UserManual.tex
@@ -204,9 +204,9 @@ This section starts with the \textbf{Username} that ZotPad is using. This is for
 
 \section{File service}
 
-The \textbf{File service} setting has three options. The default and recommended option is to use \textbf{Zotero file storage} for all libraries, and this option does not require any other configuration. The second option, \textbf{WebDAV (My Library) and Zotero file storage (Groups)}, uses WebDAV for My Library. Using this requires that user's Zotero is also configured to use the same WebDAV server and requires that the server address is specified in the settings. The server address needs to be given in the full form including the http:// or https:// prefix and the /zotero suffix. Misspecified WebDAV address will result in an error message when ZotPad is activated. Username for the WebDAV server will be asked when ZotPad attempts to connect to the WebDAV server for the first time.
+The \textbf{File service} setting has three options. The default and recommended option is to use \textbf{Zotero file storage} for all libraries, and this option does not require any other configuration. The second option, \textbf{WebDAV (My Library) and Zotero file storage (Groups)}, uses WebDAV for My Library. Using this requires that user's Zotero is also configured to use the same WebDAV server and requires that the server address is specified in the settings. The server address needs to be given in the full form including the http:// or https:// prefix and the /zotero suffix. Misspecified WebDAV address will result in an error message when ZotPad is activated. Username for the WebDAV server will be asked when ZotPad attempts to connect to the WebDAV server for the first time. If you are using a WebDAV server that has self-signed certificate, you will be presented a warning and an option to disable certificate checking for this server. Disabling certificate checking is a security risk, so you should do this only if you understand the consequences. Another alternative is to import the certificate manually\ipadfootnote{See this page for instructions on how to install SSL certificates on iPad \url{http://stackoverflow.com/questions/4589562/how-to-install-my-servers-self-signed-certificate-on-an-ipad}}.
 
-The third option is \textbf{Dropbox}. Dropbox synchronization is different from the two other options in that it does not synchronize with the Zotero server, but synchronizes files directly between ZotPad and your computer. In most cases there is no user visible difference, but in some instances this can result in files not syncing correctly\ipadfootnote{For example, if a you edit a file on your computer, but do not sync Zotero, ZotPad does not know that a new version of a file would be available in Dropbox because Zotero server is not aware of this change.}. Using Dropbox will also require that the your computer running Zotero is set up to synchronize the Zotero data directory with Dropbox.
+The third option is \textbf{Dropbox}. Dropbox synchronization is different from the two other options in that it does not synchronize with the Zotero server, but synchronizes files directly between ZotPad and your computer. In most cases there is no user visible difference, but in some instances this can result in files not syncing correctly\ipadfootnote{For example, if a you edit a file on your computer, but do not sync Zotero, ZotPad does not know that a new version of a file would be available in Dropbox because Zotero server is not aware of this change.}. Using Dropbox will also require that the your computer running Zotero is set up to synchronize the Zotero data directory with Dropbox (recommended) or that you use ZotFile plugin\ipadfootnote{More information about ZotFile can be found on the ZotFile website at \url{http://www.columbia.edu/~jpl2136/zotfile.html ZotPad supports all the ZotFile renaming features except collections based renaming.}} to copy the attachment files to Dropbox.
 
 The recommended way to configuring Zotero to use DropBox consists of the following steps:
 
@@ -214,11 +214,11 @@ The recommended way to configuring Zotero to use DropBox consists of the followi
 \item Enable Dropbox in ZotPad settings.
 \item Start ZotPad and try to download something. This will start Dropbox authentication.
 \item When authentication is finished, go to your computer and verify that a folder named Apps/ZotPad has been created in your Dropbox folder.
-\item Create a symbolic link from the Apps/ZotPad to your Zotero data directory using the setup scripts located in the Apps/ZotPad folder.
+\item Create a symbolic link from the Apps/ZotPad/storage to your Zotero data directory using the setup scripts located in the Apps/ZotPad/storage folder.
 \item Depending on your operating system, you may need to repeat Dropbox authentication the next time you start downloading something from Dropbox
 \end{enumerate}
 
-If you want to store the Zotero files in some other folder than the Apps/ZotPad, you can do this by changing \textbf{Advanced Dropbox settings}. If you choose to store the files somewhere else than the Apps/ZotPad folder, it is up to you to set up synchronization between Dropbox and Zotero storage folder\ipadfootnote{Although it is possible to put the entire Zotero data directory inside Dropbox, this is not recommended. Doing so will cause your database and its journal file to be synchronized to Dropbox cloud. This will create a large amount of unnecessary network traffic. Additionally, if you use Zotero on two different computers with this setup, there is a high risk of corrupting your Zotero database.}.
+If you want to use ZotFile store the Zotero files in some other folder than the Apps/ZotPad/storage, you can do this by changing \textbf{Advanced Dropbox settings}. If you choose to store the files somewhere else than the Apps/ZotPad/storage folder, it is up to you to set up synchronization between Dropbox and Zotero storage folder\ipadfootnote{Although it is possible to put the entire Zotero data directory inside Dropbox, this is not recommended. Doing so will cause your database and its journal file to be synchronized to Dropbox cloud. This will create a large amount of unnecessary network traffic. Additionally, if you use Zotero on two different computers with this setup, there is a high risk of corrupting your Zotero database.}. If you do not want to keep a copy of the entire Zotero storage directory in Dropbox, you can alternatively manage files with ZotFile. To do this, enable \textbf{Use custom filenames} and configure the custom file name settings so that they match your ZotFile configuration.
 
 \section{Reset}
 
@@ -234,7 +234,7 @@ The final setting, which is on by default, sends anonymous usage statistis and e
 
 Figure \ref{LogView.png} shows the ZotPad log viewer. This view is activated by tapping the gear button in the main view. The purpose of the log viewer is to help in troubleshooting the application. For example, if files fail do download because a WebDAV server is not working correctly or cannot be reached, this will be recorded in the log.
 
-The log contains three types of messages. Information (INFO) describe the normal workign of ZotPad. Warnings (WARN) are issued when something more important, but still normal is taking place (e.g. purging old files). Errors (ERROR) are printed out when something goes wrong (e.g. a file that you wanted to download was not found).
+The log contains three types of messages. Information (INFO) describe the normal operation of ZotPad. Warnings (WARN) are issued when something more important, but still normal is taking place (e.g. purging old files). Errors (ERROR) are printed out when something goes wrong (e.g. a file that you wanted to download was not found). Some of the log messages contain links to online documentation and troubleshooting instructions.
 
 The log file is is reset every day and log files are stored for seven days before deleting. Old logs can be accessed with iTunes. 
 
@@ -242,7 +242,7 @@ The log file is is reset every day and log files are stored for seven days befor
 \image{ZotPad log viewer}{LogView.png}
 \end{figure}
 
-The toolbar contains \ipad{four}\iphone{three }buttons. The first button will show this user manual\ipad{ and the second button will open the support pages on the ZotPad website. These pages contain the most up to date documentation and are complementary to this user manual}. The \textbf{Email support} button will open an email template that contains information about your access key and the most recent log file.
+The toolbar contains \ipad{four}\iphone{three} buttons. The first button will show this user manual\ipad{ and the second button will open the support pages on the ZotPad website. These pages contain the most up to date documentation and are complementary to this user manual}. The \textbf{Email support} button will open an email template that contains information about your access key and the most recent log file.
 
 \textbf{\ipad{Manage }API key} will open a key management page in Safari. After you have logged in to zotero.org, this page can be used to adjust the permissions that the access key that ZotPad uses has. For example, you can limit the key to only one particular group library, remove write access from the key, or restrict the key so that it cannot be used to access your notes.
 
