UserVoice and final version of user manual

--- a/Docs/UserManual.tex
+++ b/Docs/UserManual.tex
@@ -242,7 +242,7 @@ The log file is is reset every day and log files are stored for seven days befor
 \image{ZotPad log viewer}{LogView.png}
 \end{figure}
 
-The toolbar contains \ipad{four}\iphone{three} buttons. The first button will show this user manual\ipad{ and the second button will open the support pages on the ZotPad website. These pages contain the most up to date documentation and are complementary to this user manual}. The \textbf{Email support} button will open an email template that contains information about your access key and the most recent log file.
+The toolbar contains \ipad{five}\iphone{three} buttons. The first button will show this user manual\ipad{ and the second button will open embedded UserVoice application which containing answers to frequently asked questions}. The \textbf{Contact support} button can be used to contact ZotPad helpdesk by email. The email contains information about your access key and the most recent log file.
 
 \textbf{\ipad{Manage }API key} will open a key management page in Safari. After you have logged in to zotero.org, this page can be used to adjust the permissions that the access key that ZotPad uses has. For example, you can limit the key to only one particular group library, remove write access from the key, or restrict the key so that it cannot be used to access your notes.
 
